# scmdb-watcher-rust

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/importer/: mod.rs
src-tauri/src/server/: mod.rs  sse_server.rs
src-tauri/src/watcher/: bus.rs  mod.rs  parser.rs  patterns.rs  state.rs  tailer.rs
